--- a/messageboard.html
+++ b/messageboard.html
@@ -17,8 +17,26 @@
 
 <body>
 
-    <h1>留言板</h1>
-    <p>hi</p>
+    <div class="container mt-3 box">
+        <h2 class="mestitle">留言板</h2>
+        <form>
+            <div class="mb-3 mt-3">
+                <div class="mb-3">
+                    <label for="name">姓名</label>
+                    <input type="text" class="form-control" id="name" placeholder="輸入姓名" name="text">
+                </div>
+                <div class="mb-3">
+                    <label for="comment">內容</label>
+                    <textarea class="form-control" rows="3" id="comment" name="text"></textarea>
+                </div>
+                <button type="button" class="btn btn-outline-warning">送出訊息</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="container mt-3 mes">
+        78956132
+    </div>
 
 </body>
 
