--- a/messageboard.html
+++ b/messageboard.html
@@ -23,20 +23,18 @@
             <div class="mb-3 mt-3">
                 <div class="mb-3">
                     <label for="name">姓名</label>
-                    <input type="text" class="form-control" id="name" placeholder="輸入姓名" name="text">
+                    <input type="text" class="form-control" id="yourname" placeholder="輸入姓名" name="text">
                 </div>
                 <div class="mb-3">
                     <label for="comment">內容</label>
                     <textarea class="form-control" rows="3" id="comment" name="text"></textarea>
                 </div>
-                <button type="button" class="btn btn-outline-warning">送出訊息</button>
+                <button type="button" class="btn btn-outline-warning" id="tap">送出訊息</button>
             </div>
         </form>
     </div>
 
-    <div class="container mt-3 mes">
-        
-    </div>
+    <div id="messages"></div>
 
 </body>
 
