--- a/messageboard.html
+++ b/messageboard.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="comment">內容</label>
-                    <textarea class="form-control" rows="3" id="comment" name="text"></textarea>
+                    <textarea class="form-control" rows="3" id="comment" placeholder="輸入內容" name="text"></textarea>
                 </div>
                 <button type="button" class="btn btn-outline-warning" id="tap">送出訊息</button>
             </div>
